package com.j2kb.goal.repository;

import com.j2kb.goal.dto.Verification;

public interface VerificationRepository {
    void insertVerification(Verification verification);
}
